<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="2dp">


    <LinearLayout
        android:id="@+id/productHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:background="?selectableItemBackground"
            app:srcCompat="@drawable/small_delete_icon" />

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/product_image"
            />

        <TextView
            android:id="@+id/txtProductTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:text=""
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:padding="3dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/product_title"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textSize="20dp"
                android:textColor="@color/app_icon"
                />
            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                />


        </LinearLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>